--- a/src/styles/_movingServices.scss
+++ b/src/styles/_movingServices.scss
@@ -1,166 +1,217 @@
 .movingServices {
-    padding: 0;
-    text-align: center;
-    position: relative;
-    background-size: cover;
-    background-position: center;
-    background-image: url('../assets/subheaderBackground.png');
-  
-    .services-heading {
-      width: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      color: #fff;
-      padding: 2rem;
-      box-sizing: border-box;
-  
-      h2 {
-        margin: 0;
-        font-size: 2.5rem;
-        text-align: left;
-      }
+  padding: 0;
+  text-align: center;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-image: url('../assets/subheaderBackground.png');
+
+  .services-heading {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 2rem;
+    box-sizing: border-box;
+
+    h2 {
+      margin: 0;
+      font-size: 2.5rem;
+      text-align: left;
     }
-  
-    .content-layer {
-      background-color: #f9f9f9;
-      padding: 5rem 0;
-      min-height: 100vh;
-  
-      .estimation-section {
+  }
+
+  .content-layer {
+    background-color: #f9f9f9;
+    padding: 5rem 0;
+    min-height: 100vh;
+
+    .estimation-section {
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      margin-bottom: 2rem;
+      width: 60%; 
+      margin: 0 auto;
+      background-color: #fff;
+      height: calc(100% + 4rem);
+
+      .package {
+        position: relative;
+        flex: 1.5;
+        padding: 4rem;
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        align-items: stretch;
-        margin-bottom: 2rem;
-        width: 60%; 
-        margin: 0 auto;
-        background-color: #fff;
-        height: calc(100% + 4rem);
-  
-        .package {
+        border: 1px solid #ddd;
+        padding: 1rem;
+        border-radius: 0.5rem 0 0 0.5rem;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-image: url('../assets/movingCleaningBackground.jpg');
+
+        &::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.5); 
+          border-radius: inherit; 
+          z-index: 1; 
+        }
+
+        p {
           position: relative;
-          flex: 1.5;
-          padding: 4rem;
+          z-index: 2;
+          font-size: 1.5rem;
+          font-weight: 800;
+          color: #fff;
+        }
+
+        .package-item {
+          position: relative;
+          z-index: 2;
           display: flex;
           flex-direction: column;
           justify-content: center;
-          border: 1px solid #ddd;
-          padding: 1rem;
-          border-radius: 0.5rem 0 0 0.5rem;
-          background-size: cover;
-          background-repeat: no-repeat;
-          background-image: url('../assets/movingCleaningBackground.jpg');
-  
-          &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); 
-            border-radius: inherit; 
-            z-index: 1; 
-          }
-  
-          p {
-            position: relative;
-            z-index: 2;
-            font-size: 1.5rem;
-            font-weight: 800;
-            color: #fff;
-          }
-  
-          .package-item {
-            position: relative;
-            z-index: 2;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            text-align: left;
-          }
-  
-          .package-note {
-            position: relative;
-            top: 3rem;
-  
-            p{
-              font-size: 0.875rem; 
-              color: #ececec; 
-            }
-          }
+          text-align: left;
         }
-  
-        .estimation-form {
-          flex: 1;
-          background-color: #fff;
-          border: 1px solid #ddd;
-          border-radius: 0 1rem 1rem 0;
-          padding: 4rem;
-  
-          .form-group {
-            margin-bottom: 1rem;
-  
-            select {
-              width: 100%;
-              padding: 0.5rem;
-              border-radius: 5px;
-              border: 1px solid #ddd;
-              font-weight: 500;
-            }
-          }
-  
-          button {
-            padding: 0.5rem 2rem;
-            border: none;
-            border-radius: 5px;
-            background-color: #354d40;
-            color: #fff;
-            cursor: pointer;
-  
-            &:hover {
-              background-color: #aad2ba;
-            }
-          }
-  
-          .estimated-time {
-            margin-top: 1rem;
-            font-weight: bold;
-  
-            .note {
-              font-weight: lighter;
-              font-size: 0.8rem;
-              font-style: italic;
-              margin-top: 0.5rem; 
-            }
-          }
-        }
-      }
-    }
-  
-    @media (max-width: 1024px) {
 
-      .package-note{
-        margin-bottom: 2rem;
+        .package-note {
+          position: relative;
+          top: 3rem;
+
+          p{
+            font-size: 0.875rem; 
+            color: #ececec; 
+          }
+        }
       }
-  
-      .content-layer {
-        .estimation-section {
-          flex-direction: column;
-  
-          .package,
-          .estimation-form {
-            flex: none;
+
+      .estimation-form {
+        flex: 1;
+        background-color: #fff;
+        border: 1px solid #ddd;
+        border-radius: 0 1rem 1rem 0;
+        padding: 4rem;
+
+        .form-group {
+          margin-bottom: 1rem;
+
+          select {
             width: 100%;
-            padding: 2rem;
-            border-radius: 0;
+            padding: 0.5rem;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+            font-weight: 500;
+          }
+        }
+
+        button {
+          padding: 0.5rem 2rem;
+          border: none;
+          border-radius: 5px;
+          background-color: #354d40;
+          color: #fff;
+          cursor: pointer;
+
+          &:hover {
+            background-color: #aad2ba;
+          }
+        }
+
+        .estimated-time {
+          margin-top: 1rem;
+          font-weight: bold;
+
+          .note {
+            font-weight: lighter;
+            font-size: 0.8rem;
+            font-style: italic;
+            margin-top: 0.5rem; 
           }
         }
       }
     }
-  
-    @media (max-width: 480px) {
-      .estimation-section{
-        margin: 0 3rem !important;
+
+    .slogan-container {
+      display: flex;
+      background-color: #f5f5f5;
+      padding: 2rem;
+      border-radius: 0.5rem;
+      text-align: left;
+      justify-content: space-between;
+      align-items: center;
+      margin: 2rem auto;
+      width: 80%;
+
+      .text {
+        flex: 1;
+      }
+
+      .slogan {
+        font-size: 3rem;
+        font-weight: 900;
+        margin-bottom: 1rem;
+      }
+
+      .paragraph {
+        width: 80%;
+        font-size: 1.25rem;
+      }
+
+      .image {
+        flex: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          max-width: 100%;
+          height: auto;
+          border-radius: 0.5rem;
+        }
       }
     }
   }
-  
+
+  @media (max-width: 1024px) {
+
+    .package-note {
+      margin-bottom: 2rem;
+    }
+
+    .content-layer {
+      .estimation-section {
+        flex-direction: column;
+
+        .package,
+        .estimation-form {
+          flex: none;
+          width: 100%;
+          padding: 2rem;
+          border-radius: 0;
+        }
+      }
+
+      .slogan-container {
+        flex-direction: column;
+
+        .paragraph {
+          width: 80%;
+        }
+
+        .image {
+          margin-top: 2rem;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 480px) {
+    .estimation-section {
+      margin: 0 3rem !important;
+    }
+  }
+}
